--- a/gradle.properties
+++ b/gradle.properties
@@ -6,16 +6,14 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
-loader_version=0.16.10
+loader_version=0.16.9
 
 # Mod Properties
-mod_version=0.1
+mod_version=1.21.1-0.2
 maven_group=com.phoen1x.polychess
 archives_base_name=polychess
 
 # Dependencies
-fabric_version=0.114.0+1.21.1
+fabric_version=0.102.0+1.21.1
 polymer_version=0.9.18+1.21.1
 factorytools_version=0.3.2+1.21
-sgui_version=1.6.1+1.21.1
-fabric_permissions_api=0.3.1
